--- a/DCLLI_Control_System/Debug/makefile
+++ b/DCLLI_Control_System/Debug/makefile
@@ -61,8 +61,8 @@ all: main-build
 main-build: Light_Intensity.elf secondary-outputs
 
 # Tool invocations
-Light_Intensity.elf Light_Intensity.map: $(OBJS) $(USER_OBJS) C:\Users\oladi\OneDrive\Desktop\SEMS\submission\Light_Intensity\STM32F746ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Light_Intensity.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\Users\oladi\OneDrive\Desktop\SEMS\submission\Light_Intensity\STM32F746ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Light_Intensity.map" -Wl,--gc-sections -static -LC:/Users/oladi/STM32Cube/Repository/Packs/ARM/CMSIS/5.7.0/CMSIS/DSP/Lib/GCC --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Light_Intensity.elf Light_Intensity.map: $(OBJS) $(USER_OBJS) C:\Users\oladi\OneDrive\Desktop\SEMS\MicroProcessor\Final_Project\DYNAMIC-CLOSED-LOOP-LIGHT-INTENSITY-CONTROL-SYSTEM\DCLLI_Control_System\STM32F746ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Light_Intensity.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\Users\oladi\OneDrive\Desktop\SEMS\MicroProcessor\Final_Project\DYNAMIC-CLOSED-LOOP-LIGHT-INTENSITY-CONTROL-SYSTEM\DCLLI_Control_System\STM32F746ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Light_Intensity.map" -Wl,--gc-sections -static -LC:/Users/oladi/STM32Cube/Repository/Packs/ARM/CMSIS/5.7.0/CMSIS/DSP/Lib/GCC --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
